tests/ui/typeck/issue-91334.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-91334.rs:7:19
   |
LL | fn f(){||yield(((){),
   |                -  ^^ mismatched closing delimiter
   |                |  |
   |                |  unclosed delimiter
   |                closing delimiter possibly meant for this

error: this file contains an unclosed delimiter
  --> $DIR/issue-91334.rs:7:23
   |
LL | fn f(){||yield(((){),
   |       -       -      ^
   |       |       |
   |       |       unclosed delimiter
   |       unclosed delimiter

error: aborting due to 2 previous errors

